fix: chrom* shows scrollbars, they look uggggly

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
 .info {
   margin-left: 10px;
   font-size: 1.2em;
-  overflow-y: scroll;
   scrollbar-color: #4d4d4d transparent;
   scrollbar-width: thin;
 }
@@ -47,7 +46,6 @@ span.fas {
 .channelname {
   font-weight: bold;
   max-height: 2.75em;
-  overflow-y: scroll;
   scrollbar-color: #4d4d4d transparent;
   scrollbar-width: thin;
 }
